--- a/main/index.html
+++ b/main/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body id="bg-img">
     <header>
         <div class="menu-btn">
             <div class="btn-linn"></div>
@@ -60,7 +60,7 @@
                 <i class="fab fa-github fa-2x"></i>
             </a>
         </div>
-        
+
     </main>
 
 
